@@ -1,0 +1,4 @@
+	lui	$4,%lo(%neg(%lo(bar-foo)))
+foo:
+	nop
+bar:
