@@ -664,6 +664,7 @@ if { [istarget mips*-*-*] } then {
 	run_dump_test "elf-rel20"
 	if $has_newabi {
 	    run_dump_test "elf-rel21"
+	    run_dump_test "elf-rel22"
 	}
 
 	if { !$no_mips16 } {
